--- a/WebServerFinal/Views/Shared/_Layout.cshtml
+++ b/WebServerFinal/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - WebServerFinal</title>
+    <title>@ViewData["Title"] - Library Management</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebServerFinal.styles.css" asp-append-version="true" />
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">WebServerFinal</a>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index">Library Management</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,13 +20,17 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="About">About Us</a>
                         </li>
                     </ul>
                 </div>
+               <div class="navbar-nav navbar-right">
+                   <!-- Check login status to change to "Profile" from "Sign In" -->
+                   <a class="nav-item nav-link text-dark" asp-controller="Login" asp-action="Index">Sign In</a>
+               </div>
             </div>
         </nav>
     </header>
@@ -38,7 +42,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - WebServerFinal - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2023 - WebServerFinal - <a asp-controller="Home" asp-action="About">About Us</a>
         </div>
     </footer>
 
