Created Login forms.

--- a/WebServerFinal/Views/Shared/_Layout.cshtml
+++ b/WebServerFinal/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - WebServerFinal - <a asp-controller="Home" asp-action="About">About Us</a>
+            &copy; 2023 - Web Server Application Development Final Project - <a asp-controller="Home" asp-action="About">About Us</a>
         </div>
     </footer>
 
