--- a/WebServerFinal/Views/Login/Index.cshtml
+++ b/WebServerFinal/Views/Login/Index.cshtml
@@ -2,4 +2,26 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    ViewData["Title"] = "Sign In";
 }
+
+<div class="w-50 p-3 mx-auto">
+    <form method="post">
+        <h3 class="display-5 text-center">Sign In</h3>
+        <hr />
+        <div class="form-outline mb-4">
+            <label class="form-label" for="form2Example1">Email address</label>
+            <input type="email" id="email" class="form-control" />
+        </div>
+        <div class="form-outline mb-4">
+            <label class="form-label" for="form2Example2">Password</label>
+            <input type="password" id="password" class="form-control" />
+        </div>
+        <button type="button" class="btn btn-primary btn-block mb-4 w-100">Sign in</button>
+        <div class="text-center">
+            <p>Don't have an account? 
+                <a asp-controller="Login" asp-action="Register">Create one here!</a>
+            </p>
+        </div>
+    </form>
+</div>
