--- a/WebServerFinal/Views/Login/Index.cshtml
+++ b/WebServerFinal/Views/Login/Index.cshtml
@@ -1,27 +1,31 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using WebServerFinal.Models
+@model Users
 @{
     ViewData["Title"] = "Sign In";
 }
 
 <div class="w-50 p-3 mx-auto">
-    <form method="post">
+    <form asp-action="Login" method="post">
         <h3 class="display-5 text-center">Sign In</h3>
         <hr />
+        <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-outline mb-4">
-            <label class="form-label" for="form2Example1">Email address</label>
-            <input type="email" id="email" class="form-control" />
+            <label asp-for="Email" class="form-label">Email address</label>
+            <input asp-for="Email" type="email" class="form-control" required/>
         </div>
         <div class="form-outline mb-4">
-            <label class="form-label" for="form2Example2">Password</label>
-            <input type="password" id="password" class="form-control" />
+            <label asp-for="Password" class="form-label">Password</label>
+            <input asp-for="Password" type="password" class="form-control" required/>
         </div>
-        <button type="button" class="btn btn-primary btn-block mb-4 w-100">Sign in</button>
+        <button type="submit" class="btn btn-primary btn-block mb-4 w-100">Sign in</button>
         <div class="text-center">
             <p>Don't have an account? 
                 <a asp-controller="Login" asp-action="Register">Create one here!</a>
             </p>
         </div>
+        
+        <!-- Hidden fields for validation -->
+        <input type="hidden" asp-for="Name" value="test"/>
+        <input type="hidden" asp-for="Books" />
     </form>
 </div>
