--- a/WebServerFinal/Views/Login/LogOut.cshtml
+++ b/WebServerFinal/Views/Login/LogOut.cshtml
@@ -1,11 +1,10 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
     ViewData["Title"] = "Sign Out";
 }
 
 <div class="text-center">
-    <p>Do you wish to sign out?</p>
-    <button class="btn btn-primary">Sign Out</button>
+    <form asp-action="LogOutAction" method="post">
+        <p>Do you wish to sign out?</p>
+        <button type="submit" class="btn btn-primary">Sign Out</button>
+    </form>
 </div>
