--- a/WebServerFinal/Views/Home/Index.cshtml
+++ b/WebServerFinal/Views/Home/Index.cshtml
@@ -4,10 +4,13 @@
     ViewData["Title"] = "Homepage";
 }
 
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor myHttpContext;
+
 <div class="text-center">
     <h1 class="display-5">All Books</h1>
 
-    <a asp-action="Add" asp-controller="Book" class="btn btn-dark mr-2">Add Book</a>
+    <hr />
 
     <table class="table table-striped">
         <thead>
@@ -19,22 +22,37 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (Books c in Model)
+            <!-- Check login status to change to "Profile" from "Sign In" -->
+            @if (myHttpContext.HttpContext.Session.GetString("UserID") != null)
             {
                 <tr>
-                    <td>@c.Title</td>
-                    <td>@c.Author</td>
-                    <td>
-                        @if(c.Genres != null)
-                        {
-                            // Display genre name
-                            @c.Genres.Genre
-                        }
-                    </td>
-                    <td>
-                        <a class="" asp-controller="" asp-action="">Check Out</a>
-                        <a asp-action="Delete" asp-controller="Book" asp-route-id="@c.BookID"
-                       class="btn btn-outline-dark">Delete</a>
+                    <a asp-action="Add" asp-controller="Book">Add A Book</a>
+                </tr>
+                @foreach (Books c in Model)
+                {
+                    <tr>
+                        <td>@c.Title</td>
+                        <td>@c.Author</td>
+                        <td>
+                            @if (c.Genres != null)
+                            {
+                                // Display genre name
+                                @c.Genres.Genre
+                            }
+                        </td>
+                        <td>
+                            <a class="btn btn-outline-dark" asp-controller="" asp-action="">Edit</a>
+                            <a asp-action="Delete" asp-controller="Book" asp-route-id="@c.BookID"
+                            class="btn btn-outline-dark">Delete</a>
+                        </td>
+                    </tr>
+                }
+            }
+            else
+            {
+                <tr>
+                    <td colspan="4">
+                        <a asp-controller="Login" asp-action="Index">Sign in to edit books.</a>
                     </td>
                 </tr>
             }
