Created individual pages.

--- a/WebServerFinal/Views/Book/Add.cshtml
+++ b/WebServerFinal/Views/Book/Add.cshtml
@@ -4,7 +4,7 @@
 	ViewData["Title"] = $"{ViewBag.Operation} Book";
 }
 
-<h2 class="p-2">@ViewBag.Operation Add Book</h2>
+<h2 class="p-2">@ViewBag.Operation Book</h2>
 
 <form asp-action="Add" method="post">
 	<div asp-validation-summary="All" class="text-danger"></div>
