--- a/WebServerFinal/Views/Book/Delete.cshtml
+++ b/WebServerFinal/Views/Book/Delete.cshtml
@@ -7,7 +7,10 @@
 <h2 class="p-2">Delete Book</h2>
 <ul class="list-group mb-2">
     <li class="list-group-item">
-        <h4>@Model?.Title @Model?.Author</h4>
+        Title: @Model?.Title
+    </li>
+    <li class="list-group-item">
+        Author: @Model?.Author
     </li>
     <li class="list-group-item">
         Genre: @Model?.Genres.Genre
