--- a/WebServerFinal/Views/Home/About.cshtml
+++ b/WebServerFinal/Views/Home/About.cshtml
@@ -7,6 +7,11 @@
 
 <div class="text-center">
     <h1 class="display-5">Contributors</h1>
-    <p>This project was created by Chang Xu, Tara Poudyel, Tigran Klekchyan, and Kenneth Otero.</p>
+    <p>This project was created by 
+        <a asp-controller="Home" asp-action="Chang">Chang Xu</a>, 
+        <a asp-controller="Home" asp-action="Tara">Tara Poudyel</a>,
+        <a asp-controller="Home" asp-action="Tigran">Tigran Klekchyan</a>, and
+        <a asp-controller="Home" asp-action="Kenneth">Kenneth Otero</a>.
+    </p>
 </div>
 
