--- a/WebServerFinal/Views/Home/Chang.cshtml
+++ b/WebServerFinal/Views/Home/Chang.cshtml
@@ -6,6 +6,8 @@
     <h1 class="display-5">Chang Xu</h1>
     <hr />
     <p>
-         
+        Hello, my name is Chang Xu. 
+        In this project, I am responsible for the output of the book list, add and delete book function on Home page. 
+        I am grateful to Kenneth for helping me to fix some bugs in the Add function.
     </p>
 </div>
