--- a/WebServerFinal/Views/Home/Index.cshtml
+++ b/WebServerFinal/Views/Home/Index.cshtml
@@ -41,7 +41,8 @@
                             }
                         </td>
                         <td>
-                            <a class="btn btn-outline-dark" asp-controller="" asp-action="">Edit</a>
+                            <a asp-action="Edit" asp-controller="Book" asp-route-id="@c.BookID"
+                            class="btn btn-outline-dark">Edit</a>
                             <a asp-action="Delete" asp-controller="Book" asp-route-id="@c.BookID"
                             class="btn btn-outline-dark">Delete</a>
                         </td>
