Completed about me page

--- a/WebServerFinal/Views/Home/Tigran.cshtml
+++ b/WebServerFinal/Views/Home/Tigran.cshtml
@@ -6,6 +6,7 @@
     <h1 class="display-5">Tigran Klekchyan</h1>
     <hr />
     <p>
-         
+        Hello, my name is Tigran Klekchyan. 
+        For this project I was responsible for the Edit page of the web app as well as the about page about myself.
     </p>
 </div>
