tara-added about me

--- a/WebServerFinal/Views/Home/Tara.cshtml
+++ b/WebServerFinal/Views/Home/Tara.cshtml
@@ -6,6 +6,7 @@
     <h1 class="display-5">Tara Poudyel</h1>
     <hr />
     <p>
-         
+         Hello My name is Tara Poudyel,
+         Due to a miscommunication on my part I was working on the Edit page at the same time as Tigran.
     </p>
 </div>
